--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,38 @@
-.action-button {
-    color: #ffffff;
-    background: #3907c2;
-    outline: none;
+.container {
+    padding: 30px;
 }
-.file-input, .action-button {
+.file-input {
     border: 1px solid #ccc;
     cursor: pointer;
     font-size: 1em;
-    margin: 10px;
     padding: 6px 15px;
     border-radius: 20px;
+    color: #ffffff;
+    background: #3907c2;
 } 
 .file-input input {
     display: none;
 }
-.errors-list {
-    margin: 10px 30px;
+.errors-list, .canvas {
+    margin: 20px 0px;
 }
 .error {
     font-weight: bolder;
-    margin: 10px 0px;
+    margin-top: 10px;
     color: rgb(185, 15, 15);
+}
+
+.row {
+    display: flex;
+}
+.cell {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin: 5px;
+    color: cornsilk;
+    background: blueviolet;
+    width: 15px;
+    height: 15px;
 }
