--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,18 @@
 }
 .cell {
     border: 1px solid #ccc;
-    width: 15px;
-    height: 15px;
+}
+.input-container {
+    display: flex;
+    width: fit-content;
+}
+.dimension-label {
+    margin: 0px 5px 0px 20px;
+}
+.dimension-input {
+    padding: 5px 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    outline: none;
+    width: 40px;
 }
